evaluation metric for clustering algo

--- a/abbrev.bib
+++ b/abbrev.bib
@@ -400,3 +400,8 @@ url="https://doi.org/10.1007/978-0-387-30164-8_426"
   howpublished = {\url{https://builtin.com/data-science/transfer-learning}},
 }
 
+@misc{chindex,
+  title = {Calinski-Harabasz Index},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Calinski-Harabasz_index}},
+}
+
